@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.124 2004/08/24 10:40:30 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.125 2004/08/26 20:12:32 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -210,6 +210,13 @@ $conf->contact_number_max = 10;
 // large mails attachments. Try to find correct setting (about 2.5x total
 // attachment size)
 $conf->memory_limit="20M";
+
+// Allow only specified characters for login. The format of this configuration
+// variable is any valid regular expression.
+// Example: '^[a-zA-Z0-9_]+$' : login only with letters (upper and lower case),
+// numbers and '_' character
+// Set to '' to disable
+$conf->allowed_char='';
 
 /*
 ###################     End of Configuration     ####################
